--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-
+    <input id="text-in" placeholder="Escribe tu mensaje y dale a enviar"></input>
     <button onclick="sendMsg()">Enviar</button>
     <div >
 
@@ -22,14 +22,14 @@
         const socket = io("http://localhost:8080");
 
         function sendMsg(){
-            let message = document.getElementsById('text-in').value;
+            let message = document.getElementById('text-in').value;
 
             socket.emit('message', message);
         }
 
         socket.on('message', (messageIn) => {
             console.log(messageIn);
-            let list = document.getElementsById("message-container").innerHTML;
+            let list = document.getElementById("message-container").innerHTML;
             list += `<li>${messageIn}</li>`;
 
             document.getElementById('message-container').innerHTML += `<li>${messageIn}</li>`;
